# screenlane

./: .env.example  .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES.md  package-lock.json  package.json  tsconfig.json
demo/: captions.srt  demo-output.json  script.md  storyboard.md
demo-video/: package-lock.json  package.json  tsconfig.json
demo-video/scripts/: fix-network.cjs
demo-video/src/: root.tsx  video.tsx
docs/: API.md  CLI.md  INSTALL.md  MCP.md  PYTHON.md  ROADMAP.md  SDK.md  SECURITY.md  SKILLS.md  TROUBLESHOOTING.md  VIDEO.md
examples/basic-command/: README.md
examples/codra-fix-error/: README.md
examples/mcp-client/: README.md
examples/tera-explain-page/: README.md
python/: README.md  pyproject.toml
python/talocode_screenlane/: __init__.py  cli.py  client.py
python/tests/: test_client.py
scripts/: build.mjs  cloud-smoke.mjs  make-demo-video.mjs  make-professional-demo.py  release-notes.mjs  smoke-test.mjs  test-mcp.mjs
skills/screen-aware-command/: SKILL.md  examples.md  tools.json
skills/screen-aware-debugging/: SKILL.md  examples.md  tools.json
skills/screen-aware-writing/: SKILL.md  examples.md  tools.json
src/: cli.ts  index.ts
src/api/: routes.ts  server.ts
src/core/: audio.ts  auth.ts  capture.ts  command.ts  config.ts  context.ts  demo.ts  doctor.ts  errors.ts  ids.ts  ocr.ts  router.ts  storage.ts  transcribe.ts  types.ts
src/mcp/: server.ts  tools.ts
src/providers/: codra.ts  (+4 more)
test/: api.test.ts  command.test.ts  config-auth.test.ts  demo.test.ts  mcp.test.ts  ocr.test.ts  providers.test.ts  storage.test.ts
(+1 files in other folders)
