[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talocode-screenlane"
version = "0.1.0"
description = "Python SDK and CLI for ScreenLane — screen-aware voice command layer for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Talocode" }]
keywords = ["screenlane", "talocode", "ai-agents", "mcp", "voice", "screen-aware"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "build", "twine"]

[project.scripts]
screenlane-py = "talocode_screenlane.cli:main"

[project.urls]
Homepage = "https://github.com/talocode/screenlane"
Repository = "https://github.com/talocode/screenlane"

[tool.setuptools.packages.find]
where = ["."]
include = ["talocode_screenlane*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
